--- a/sass/page/top/_products.scss
+++ b/sass/page/top/_products.scss
@@ -4,15 +4,17 @@
 /* top-products
 ----------------------------------------- */
 .products-list {
-    display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
     margin-bottom: -35px;
 }
 
 .products-list__item {
     width: calc(100% / 2 - 40px * 1 / 2);
     margin-bottom: 35px;
+
+    @include g.mq(sm) {
+        width: 100%;
+    }
 }
 
 .products-banner {
