--- a/sass/component/block/_access.scss
+++ b/sass/component/block/_access.scss
@@ -10,6 +10,11 @@
         width: 100%;
         height: 100%;
     }
+
+    @include g.mq(md) {
+        width: 100%;
+        height: 300px;
+    }
 }
 
 .access-info {
@@ -29,5 +34,10 @@
     dd {
         line-height: 1.875;
         margin-top: g.rem(10px);
+    }
+
+    @include g.mq(md) {
+        width: 100%;
+        padding: 2rem 2.5rem 3rem;
     }
 }
