--- a/sass/component/block/_global-nav.scss
+++ b/sass/component/block/_global-nav.scss
@@ -3,11 +3,6 @@
 
 /* global-nav
 ----------------------------------------- */
-.global-nav__items {
-    display: flex;
-    justify-content: space-between;
-}
-
 .global-nav__link {
     font-size: g.rem(20px);
     font-weight: 600;
@@ -31,5 +26,103 @@
         &::before {
             width: 110%;
         }
+    }
+}
+
+/* global-nav_sp
+----------------------------------------- */
+.global-nav__sp-btn {
+    display: none;
+    width: 50px;
+    height: 50px;
+    background: g.$cMain;
+    border-radius: 999px;
+    position: fixed;
+    top: 20px;
+    right: 30px;
+    z-index: 110;
+
+    > span {
+        width: 55%;
+        height: 3px;
+        background: g.$cText_wh;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        transition: all .3s;
+
+        &:first-of-type {
+            top: 15px;
+        }
+
+        &:nth-of-type(2) {
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        &:last-of-type {
+            bottom: 15px;
+        }
+    }
+
+    &.js-open_btn {
+        > span {
+            &:first-of-type {
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%) rotate(45deg);
+            }
+
+            &:nth-of-type(2) {
+                opacity: 0;
+            }
+
+            &:last-of-type {
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%) rotate(-45deg);
+            }
+        }
+    }
+
+    @include g.mq(md) {
+        display: block;
+    }
+}
+
+.open-contents_sp {
+    width: 35%;
+    min-width: 270px;
+    height: 50%;
+    padding: 70px;
+    background: rgba(g.$cMain, .8);
+    border-radius: 20px;
+    position: fixed;
+    top: 100px;
+    right: -500px;
+    transition: right .4s;
+    z-index: 100;
+
+    &.js-open_nav {
+        right: 30px;
+    }
+}
+
+.global-nav__list_sp {
+    display: flex;
+    flex-direction: column;
+}
+
+.global-nav__item_sp {
+    display: inline;
+
+    &:not(:first-of-type) {
+        margin-top: 20px;
+    }
+}
+
+.global-nav__link_sp {
+    &::before {
+        background: g.$cBg_main;
     }
 }
