--- a/sass/global/_mixin.scss
+++ b/sass/global/_mixin.scss
@@ -3,14 +3,14 @@
 /* media-query
 ------------------------------------------- */
 $breakpoints: (
-  'sm': (min-width: 577px),
-  'md': (min-width: 769px),
-  'lg': (min-width: 993px),
-  'xl': (min-width: 1201px),
-  'xxl': (min-width: 1401px)
+  'sm': (max-width: 576px),
+  'md': (max-width: 768px),
+  'lg': (max-width: 992px),
+  'xl': (max-width: 1200px),
+  'xxl': (max-width: 1400px)
 ) !default;
 
-@mixin mq($breakpoint) {
+@mixin mq($breakpoint: sm) {
   @if map-has-key($breakpoints, $breakpoint) {
     @media screen and #{inspect(map-get($breakpoints, $breakpoint))} {
       @content;
