--- a/sass/component/block/_top-view.scss
+++ b/sass/component/block/_top-view.scss
@@ -20,6 +20,10 @@
     &_contact {
         background: url(/contact/img/contact_topview.jpg) no-repeat center 40% / cover;
     }
+
+    @include g.mq(md) {
+        height: 300px;
+    }
 }
 
 .top-view__title {
@@ -31,4 +35,12 @@
     bottom: -20px;
     left: 40px;
     transform: rotate(90deg);
+
+    @include g.mq(md) {
+        left: 0;
+    }
+
+    @include g.mq(sm) {
+        left: -13%;
+    }
 }
