--- a/css/style.css
+++ b/css/style.css
@@ -78,11 +78,6 @@ button {
 section {
   margin-top: 200px;
 }
-@media screen and (max-width: 768px) {
-  section:first-of-type {
-    margin-top: 0;
-  }
-}
 
 /* header
 -------------------------------- */
@@ -412,9 +407,28 @@ section {
 .under-header__open-contents.js-open_nav {
   top: 100px;
 }
+@media screen and (max-width: 576px) {
+  .under-header__open-contents {
+    top: -800px;
+  }
+}
 
-.under-header__nav-list * + * {
-  margin-left: 82px;
+.under-header__nav-list {
+  width: 90%;
+  max-width: 770px;
+  margin: 0 auto;
+}
+@media screen and (max-width: 576px) {
+  .under-header__nav-list {
+    display: block !important;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .under-header__nav-item {
+    margin-top: 50px;
+  }
 }
 
 .under-header__nav-link {
@@ -425,6 +439,17 @@ section {
   padding: 0.35em 1.2em 0.4em;
   border-radius: 20px;
 }
+@media screen and (max-width: 768px) {
+  .under-header__nav-link {
+    display: inline;
+    font-size: 2.7vw;
+  }
+}
+@media screen and (max-width: 576px) {
+  .under-header__nav-link {
+    font-size: 1.25rem;
+  }
+}
 
 .under-header__sns {
   width: 40%;
@@ -432,6 +457,17 @@ section {
   margin: 0 auto;
   background: #FFFCF9;
   border-radius: 20px;
+}
+@media screen and (max-width: 992px) {
+  .under-header__sns {
+    width: 60%;
+  }
+}
+@media screen and (max-width: 768px) {
+  .under-header__sns {
+    width: 80%;
+    padding: 30px 18px 35px;
+  }
 }
 
 /* top-view
@@ -451,6 +487,11 @@ section {
 .top-view_contact {
   background: url(/contact/img/contact_topview.jpg) no-repeat center 40%/cover;
 }
+@media screen and (max-width: 768px) {
+  .top-view {
+    height: 300px;
+  }
+}
 
 .top-view__title {
   font-size: 3.125rem;
@@ -462,6 +503,16 @@ section {
   left: 40px;
   -webkit-transform: rotate(90deg);
           transform: rotate(90deg);
+}
+@media screen and (max-width: 768px) {
+  .top-view__title {
+    left: 0;
+  }
+}
+@media screen and (max-width: 576px) {
+  .top-view__title {
+    left: -13%;
+  }
 }
 
 /* recruit
@@ -489,6 +540,16 @@ section {
 .recruit::after {
   border-right: 1px solid #080B0C;
   right: 0;
+}
+@media screen and (max-width: 992px) {
+  .recruit {
+    width: 80%;
+  }
+}
+@media screen and (max-width: 576px) {
+  .recruit {
+    width: 100%;
+  }
 }
 
 /* btn
@@ -758,6 +819,11 @@ section {
 ----------------------------------------- */
 .about {
   padding-top: 87px;
+}
+@media screen and (max-width: 768px) {
+  .about {
+    margin-top: 0;
+  }
 }
 
 .about-contents {
@@ -1148,11 +1214,33 @@ section {
           transform: translateX(-50%);
   z-index: -5;
 }
+@media screen and (max-width: 768px) {
+  .concept-title {
+    font-size: 3.47vw;
+  }
+  .concept-title::before {
+    height: 40%;
+  }
+}
+@media screen and (max-width: 576px) {
+  .concept-title {
+    font-size: 5.7vw;
+  }
+  .concept-title::before {
+    height: 20%;
+  }
+}
 
 .concept__img-wrapper {
   margin-top: 180px;
   height: 293px;
   position: relative;
+}
+@media screen and (max-width: 576px) {
+  .concept__img-wrapper {
+    position: static;
+    margin-top: 50px;
+  }
 }
 
 .concept__img {
@@ -1162,18 +1250,41 @@ section {
 }
 .concept__img_01 {
   top: 0;
-  right: 292px;
+  right: 30%;
 }
 .concept__img_01 img {
   border-radius: 20px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+@media screen and (max-width: 576px) {
+  .concept__img_01 {
+    right: 0;
+  }
 }
 .concept__img_02 {
   top: -100px;
-  right: -120px;
+  right: -10%;
   z-index: -5;
 }
 .concept__img_02 img {
   border-radius: 20px 0 0 20px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+@media screen and (max-width: 576px) {
+  .concept__img_02 {
+    display: none;
+  }
+}
+@media screen and (max-width: 576px) {
+  .concept__img {
+    position: relative;
+    width: 100%;
+  }
+  .concept__img:not(:first-of-type) {
+    margin-top: 20px;
+  }
 }
 
 /* message
