--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -5,6 +5,7 @@
 -------------------------------- */
 .main__inner {
     width: 83.333%;
+    max-width: 1200px;
     margin: 0 auto;
 
     @include g.mq(sm) {
