--- a/sass/page/contact/_form.scss
+++ b/sass/page/contact/_form.scss
@@ -5,7 +5,13 @@
 ----------------------------------------- */
 .contact-form {
     width: 65.555%;
+    min-width: 700px;
     margin: 100px auto 0;
+
+    @include g.mq(md) {
+        width: 100%;
+        min-width: auto;
+    }
 }
 
 .contact-form__item {
@@ -15,6 +21,10 @@
 
     &:not(:first-of-type) {
         margin-top: 30px;
+
+        @include g.mq(lg) {
+            margin-top: 40px;
+        }
     }
 
     &_textarea {
@@ -25,9 +35,15 @@
         text-align: center;
         margin-top: 85px;
     }
+
+    @include g.mq(lg) {
+        display: block;
+    }
 }
 
 .contact-form__label {
+    display: inline-block;
+
     label {
         font-size: g.rem(20px);
         font-weight: 500;
@@ -91,6 +107,10 @@
                 }
             }
         }
+
+        @include g.mq(sm) {
+            font-size: 4vw;
+        }
     }
 }
 
@@ -132,6 +152,11 @@
     &_textarea {
         height: 360px;
     }
+
+    @include g.mq(lg) {
+        width: 100%;
+        margin-top: 25px;
+    }
 }
 
 .contact-form__checkbox {
@@ -140,6 +165,7 @@
         width: 30px;
         height: 30px;
         border: 1px solid #707070;
+        background: #fff;
         border-radius: 10px;
         position: absolute;
         top: 50%;
@@ -164,6 +190,7 @@
     margin: 50px auto 0;
     border-radius: 10px;
     border: 1px solid #707070;
+    background: #fff;
     overflow-y: scroll;
 
     &::-webkit-scrollbar {
@@ -173,6 +200,11 @@
     &::-webkit-scrollbar-thumb {
         background: g.$cMain;
         border-radius: 20px;
+    }
+
+    @include g.mq(sm) {
+        padding: 40px 25px;
+        width: 100%;
     }
 }
 
