--- a/css/style.css
+++ b/css/style.css
@@ -559,6 +559,60 @@ section {
   }
 }
 
+/* loading
+----------------------------------------- */
+.loading {
+  width: 100vw;
+  height: 100vh;
+  background: #6699A1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 500;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.loading.loaded {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.loading__spinner {
+  width: 100px;
+  height: 100px;
+  border-radius: 999px;
+  border-top: 10px solid rgba(255, 252, 249, 0.2);
+  border-right: 10px solid rgba(255, 252, 249, 0.2);
+  border-bottom: 10px solid rgba(255, 252, 249, 0.2);
+  border-left: 10px solid #FFFCF9;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  -webkit-animation: loading 1.1s infinite linear;
+          animation: loading 1.1s infinite linear;
+}
+
+@-webkit-keyframes loading {
+  0% {
+    -webkit-transform: translate3d(-50%, -50%, 0) rotate(0deg);
+            transform: translate3d(-50%, -50%, 0) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: translate3d(-50%, -50%, 0) rotate(360deg);
+            transform: translate3d(-50%, -50%, 0) rotate(360deg);
+  }
+}
+
+@keyframes loading {
+  0% {
+    -webkit-transform: translate3d(-50%, -50%, 0) rotate(0deg);
+            transform: translate3d(-50%, -50%, 0) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: translate3d(-50%, -50%, 0) rotate(360deg);
+            transform: translate3d(-50%, -50%, 0) rotate(360deg);
+  }
+}
 /* btn
 -------------------------------- */
 .btn-wrapper {
