--- a/sass/component/block/_under-header.scss
+++ b/sass/component/block/_under-header.scss
@@ -4,9 +4,7 @@
 /* under-header
 ----------------------------------------- */
 .under-header__logo {
-    font-family: g.$fontTitle;
-    font-size: g.rem(40px);
-    line-height: 1.25;
+    width: 115px;
 }
 
 .under-header__nav-btn {
