--- a/sass/page/contact/_contact.scss
+++ b/sass/page/contact/_contact.scss
@@ -25,7 +25,7 @@
         content: '';
         width: 2em;
         height: 2em;
-        background: url(/contact/img/tel-icon.svg) no-repeat center center / contain;
+        background: url(../contact/img/tel-icon.svg) no-repeat center center / contain;
         position: absolute;
         top: 50%;
         left: 0;
