--- a/sass/page/top/_about.scss
+++ b/sass/page/top/_about.scss
@@ -48,7 +48,7 @@
 }
 
 .about__link {
-    background: url(/top/img/top_about.jpg) no-repeat center -55px / cover;
+    background: url(../top/img/top_about.jpg) no-repeat center -55px / cover;
     border-radius: 10px 100px;
     position: relative;
     z-index: 5;
