--- a/sass/page/top/_mv.scss
+++ b/sass/page/top/_mv.scss
@@ -6,7 +6,7 @@
 .mv {
     width: 100%;
     height: 504px;
-    background: url(/top/img/mv.jpg) no-repeat center top / cover;
+    background: url(../top/img/mv.jpg) no-repeat center top / cover;
 
     @include g.mq(sm) {
         height: 600px;
@@ -23,16 +23,6 @@
     top: 84px;
     left: 50%;
     transform: translateX(-50%);
-
-    &__title {
-        font-family: g.$fontTitle;
-        font-size: g.rem(100px);
-        line-height: 1.2;
-
-        @include g.mq(sm) {
-            font-size: 18vw;
-        }
-    }
 
     &__lead-text {
         font-size: g.rem(14px);
