--- a/css/style.css
+++ b/css/style.css
@@ -32,10 +32,6 @@ ol, ul {
   list-style-type: none;
 }
 
-@font-face {
-  font-family: "honokamarugo";
-  src: url(/common/font/font_1_honokamarugo_1.1.ttf);
-}
 /* font-size
 ------------------------------------------- */
 /* media-query
@@ -49,6 +45,11 @@ body {
   letter-spacing: 0.18em;
   color: #080B0C;
   background: #FFFCF9;
+}
+@media screen and (max-width: 576px) {
+  body {
+    font-size: 0.875rem;
+  }
 }
 
 img {
@@ -414,9 +415,7 @@ section {
 /* under-header
 ----------------------------------------- */
 .under-header__logo {
-  font-family: honokamarugo, sans-serif;
-  font-size: 2.5rem;
-  line-height: 1.25;
+  width: 115px;
 }
 
 .under-header__nav-btn {
@@ -547,13 +546,13 @@ section {
   position: relative;
 }
 .top-view_about {
-  background: url(/about/img/about_topview.jpg) no-repeat center 26%/cover;
+  background: url(../about/img/about_topview.jpg) no-repeat center 26%/cover;
 }
 .top-view_products {
-  background: url(/products/img/products_topview.jpg) no-repeat center 65%/cover;
+  background: url(../products/img/products_topview.jpg) no-repeat center 65%/cover;
 }
 .top-view_contact {
-  background: url(/contact/img/contact_topview.jpg) no-repeat center 40%/cover;
+  background: url(../contact/img/contact_topview.jpg) no-repeat center 40%/cover;
 }
 @media screen and (max-width: 768px) {
   .top-view {
@@ -897,7 +896,7 @@ section {
 .mv {
   width: 100%;
   height: 504px;
-  background: url(/top/img/mv.jpg) no-repeat center top/cover;
+  background: url(../top/img/mv.jpg) no-repeat center top/cover;
 }
 @media screen and (max-width: 576px) {
   .mv {
@@ -916,16 +915,6 @@ section {
   left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
-}
-.mv-contents__title {
-  font-family: honokamarugo, sans-serif;
-  font-size: 6.25rem;
-  line-height: 1.2;
-}
-@media screen and (max-width: 576px) {
-  .mv-contents__title {
-    font-size: 18vw;
-  }
 }
 .mv-contents__lead-text {
   font-size: 0.875rem;
@@ -988,7 +977,7 @@ section {
 }
 
 .about__link {
-  background: url(/top/img/top_about.jpg) no-repeat center -55px/cover;
+  background: url(../top/img/top_about.jpg) no-repeat center -55px/cover;
   border-radius: 10px 100px;
   position: relative;
   z-index: 5;
@@ -1424,6 +1413,7 @@ section {
 ----------------------------------------- */
 .products {
   text-align: center;
+  margin-top: 200px;
 }
 
 /* artist-products
@@ -1441,16 +1431,16 @@ section {
   position: relative;
 }
 .artist-products__banner_yt {
-  background: url(/common/img/yamadatakashi.jpg) no-repeat center 70%/cover;
+  background: url(../common/img/yamadatakashi.jpg) no-repeat center 70%/cover;
 }
 .artist-products__banner_n {
-  background: url(/common/img/ndish.jpg) no-repeat center 75%/cover;
+  background: url(../common/img/ndish.jpg) no-repeat center 75%/cover;
 }
 .artist-products__banner_s {
-  background: url(/common/img/saginuma.jpg) no-repeat center 85%/cover;
+  background: url(../common/img/saginuma.jpg) no-repeat center 85%/cover;
 }
 .artist-products__banner_na {
-  background: url(/common/img/nana.jpg) no-repeat center 43%/cover;
+  background: url(../common/img/nana.jpg) no-repeat center 43%/cover;
 }
 @media screen and (max-width: 768px) {
   .artist-products__banner {
@@ -1481,6 +1471,7 @@ section {
   display: -ms-flexbox;
   display: flex;
   overflow-x: scroll;
+  overflow-y: hidden;
 }
 .artist-products-list::-webkit-scrollbar {
   display: none;
@@ -1540,7 +1531,7 @@ section {
   content: "";
   width: 2em;
   height: 2em;
-  background: url(/contact/img/tel-icon.svg) no-repeat center center/contain;
+  background: url(../contact/img/tel-icon.svg) no-repeat center center/contain;
   position: absolute;
   top: 50%;
   left: 0;
